--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,14 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+
+.poppins-font {
+    font-family: Poppins, sans-serif;
+}
+
+.home-gallery-container img {
+    display: initial !important
+}
+
